[package]
name = "testbench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"
publish = false

[dependencies]
anyhow = "1"

less-avc = "0.1.5"

videoson-core = { path = "../videoson-core", features = ["std"] }
videoson-codec-h264 = { path = "../videoson-codec-h264", features = ["std"] }
videoson-format-ivf = { path = "../videoson-format-ivf" }