[package]
name = "testbench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.93"
publish = false

[dependencies]
anyhow = "1"

less-avc = "0.1.5"

videoson-core = { workspace = true, features = ["std"] }
videoson-codec-h264 = { workspace = true, features = ["std"] }
videoson-codec-h265 = { workspace = true, features = ["std"] }
videoson-codec-vp8 = { workspace = true, features = ["std"] }
videoson-codec-vp9 = { workspace = true, features = ["std"] }
videoson-format-ivf.workspace = true