[package]
name = "videoson-codec-h264"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["videoson-core/std", "videoson-common/std"]

# Pure-Rust full H.264 decoder backend (wasm-friendly, no FFI).
backend-rust-h264 = ["std", "dep:rust_h264"]

[dependencies]
videoson-core = { path = "../videoson-core", default-features = false }
videoson-common = { path = "../videoson-common", default-features = false }

rust_h264 = { version = "0.3.0", optional = true }