[package]
name = "videoson-codec-h265"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["videoson-core/std", "videoson-common/std"]

[dependencies]
videoson-core.workspace = true
videoson-common.workspace = true

rust_h265.workspace = true
