[package]
name = "videoson-codec-rav1d"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
rust-version.workspace = true

[features]
default = ["std"]
std = ["videoson-core/std"]

[dependencies]
videoson-core = { path = "../videoson-core", default-features = false }
rav1d-safe = "0.5"
