[package]
name = "videoson-codec-vp9"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["videoson-core/std"]

[dependencies]
videoson-core = { path = "../videoson-core", default-features = false }

oxideav-vp9.workspace = true
