[package]
name = "videoson-format-ivf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["videoson-core/std", "videoson-common/std"]

[dependencies]
videoson-core = { path = "../videoson-core", default-features = false }
videoson-common = { path = "../videoson-common", default-features = false }