[package]
name = "videoson"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std", "h264", "ivf"]
std = [
  "videoson-core/std",
  "videoson-common/std",
  "videoson-codec-h264?/std",
  "videoson-codec-h265?/std",
  "videoson-codec-vp8?/std",
  "videoson-codec-vp9?/std",
  "videoson-codec-rav1d?/std",
]
h264 = ["dep:videoson-codec-h264"]
h265 = ["dep:videoson-codec-h265"]
vp8 = ["dep:videoson-codec-vp8"]
vp9 = ["dep:videoson-codec-vp9"]
rav1d = ["dep:videoson-codec-rav1d", "std"]
ivf = ["dep:videoson-format-ivf"]

[dependencies]
videoson-core.workspace = true
videoson-common.workspace = true
videoson-format-ivf = { workspace = true, optional = true }
videoson-codec-h264 = { workspace = true, optional = true }
videoson-codec-h265 = { workspace = true, optional = true }
videoson-codec-vp8 = { workspace = true, optional = true }
videoson-codec-vp9 = { workspace = true, optional = true }
videoson-codec-rav1d = { workspace = true, optional = true }
